# ckb-cota-scripts

./: .gitignore  Makefile  README.md  capsule.toml  deployment.toml
.github/workflows/: rust.yml
c/: Makefile  ckb_smt.c  ckb_smt.h  ckb_smt.symc
contracts/: Cargo.toml
contracts/cota-type/: Cargo.toml
contracts/cota-type/src/: claim.rs  define.rs  entry.rs  main.rs  mint.rs  update.rs  withdraw.rs
contracts/registry-type/: Cargo.toml
contracts/registry-type/src/: entry.rs
contracts/script-utils/: Cargo.toml
contracts/script-utils/src/: constants.rs  cota.rs  definition.rs  error.rs  helper.rs  lib.rs  nft.rs  nft_validator.rs  registry.rs
contracts/tests/: Cargo.toml
contracts/tests/src/: claim_tests.rs  constants.rs  define_tests.rs  lib.rs  mint_tests.rs  registry_tests.rs  tests.rs  update_tests.rs  withdraw_tests.rs
