[package]
name = "cota-type"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.9.0"
script-utils = { path = "../script-utils" }
cota-smt = {package = "cota-smt", git = "https://github.com/nervina-labs/cota-smt", branch = "main", default_features = false, features = ["no-std"] }